idf_component_register(SRCS BTConfig.cpp
							Channel.cpp
							Control.cpp
							ControlPin.cpp
							CoolantControl.cpp
							CustomCode.cpp
							Error.cpp
							Expression.cpp
							FileCommands.cpp
							FileStream.cpp
							Flowcontrol.cpp
							FluidError.cpp
							FluidPath.cpp
							GCode.cpp
							HashFS.cpp
							InputFile.cpp
							Job.cpp
							Jog.cpp
							JSONEncoder.cpp
							Limit.cpp
							lineedit.cpp
							Logging.cpp
							Main.cpp
							MotionControl.cpp
							NutsBolts.cpp
							OLED.cpp
							Parameters.cpp
							Parking.cpp
							Pin.cpp
							PinMapper.cpp
							Planner.cpp
							Probe.cpp
							ProcessSettings.cpp
							Protocol.cpp
							RealtimeCmd.cpp
							Regexpr.cpp
							Report.cpp
							SDCard.cpp
							Serial.cpp
							Settings.cpp
							SettingsDefinitions.cpp
							SSD1306_I2C.cpp
							Status_outputs.cpp
							Stepper.cpp
							Stepping.cpp
							string_util.cpp
							System.cpp
							Uart.cpp
							UartChannel.cpp
							UTF8.cpp
							xmodem.cpp
							Configuration/AfterParse.cpp
							Configuration/Completer.cpp
							Configuration/GCodeParam.cpp
							Configuration/Generator.cpp
							Configuration/JsonGenerator.cpp
							Configuration/LegacySettingRegistry.cpp
							Configuration/Parser.cpp
							Configuration/RuntimeSetting.cpp
							Configuration/Tokenizer.cpp
							Configuration/Validator.cpp
							Extenders/Extenders.cpp
							Extenders/I2CPinExtenderBase.cpp
							Extenders/PCA9535_9555.cpp
							Extenders/PCA9539.cpp
							Extenders/PinExtenderDriver.cpp
							Kinematics/Cartesian.cpp
							Kinematics/CoreXY.cpp
							Kinematics/Kinematics.cpp
							Kinematics/Midtbot.cpp
							Kinematics/ParallelDelta.cpp
							Kinematics/WallPlotter.cpp
							Listeners/RGBLed.cpp
							Machine/Axes.cpp
							Machine/Axis.cpp
							Machine/EventPin.cpp
							Machine/Homing.cpp
							Machine/I2CBus.cpp
							Machine/I2SOBus.cpp
							Machine/LimitPin.cpp
							Machine/MachineConfig.cpp
							Machine/Macros.cpp
							Machine/Motor.cpp
							Machine/ProbeEventPin.cpp
							Machine/SPIBus.cpp
							Machine/UserInputs.cpp
							Machine/UserOutputs.cpp
							Motors/Dynamixel2.cpp
							Motors/MotorDriver.cpp
							Motors/NullMotor.cpp
							Motors/RcServo.cpp
							Motors/Servo.cpp
							Motors/Solenoid.cpp
							Motors/StandardStepper.cpp
							Motors/StepStick.cpp
							Motors/TMC2130Driver.cpp
							Motors/TMC2160Driver.cpp
							Motors/TMC2160ProDriver.cpp
							Motors/TMC2208Driver.cpp
							Motors/TMC2209Driver.cpp
							Motors/TMC5160Driver.cpp
							Motors/TMC5160ProDriver.cpp
							Motors/TrinamicBase.cpp
							Motors/TrinamicSpiDriver.cpp
							Motors/TrinamicUartDriver.cpp
							Pins/ChannelPinDetail.cpp
							Pins/DebugPinDetail.cpp
							Pins/ErrorPinDetail.cpp
							Pins/ExtPinDetail.cpp
							Pins/GPIOPinDetail.cpp
							Pins/I2SOPinDetail.cpp
							Pins/PinAttributes.cpp
							Pins/PinCapabilities.cpp
							Pins/PinDetail.cpp
							Pins/PinOptionsParser.cpp
							Pins/VoidPinDetail.cpp
							Spindles/10vSpindle.cpp
							Spindles/BESCSpindle.cpp
							Spindles/DacSpindle.cpp
							Spindles/HBridgeSpindle.cpp
							Spindles/LaserSpindle.cpp
							Spindles/NullSpindle.cpp
							Spindles/OnOffSpindle.cpp
							Spindles/PlasmaSpindle.cpp
							Spindles/PWMSpindle.cpp
							Spindles/RelaySpindle.cpp
							Spindles/Spindle.cpp
							Spindles/VFDSpindle.cpp
							Spindles/VFD/DanfossVLT2800Protocol.cpp
							Spindles/VFD/GenericProtocol.cpp
							Spindles/VFD/H100Protocol.cpp
							Spindles/VFD/H2AProtocol.cpp
							Spindles/VFD/HuanyangProtocol.cpp
							Spindles/VFD/NowForeverProtocol.cpp
							Spindles/VFD/SiemensV20Protocol.cpp
							Spindles/VFD/VFDProtocol.cpp
							Spindles/VFD/YL620Protocol.cpp
							ToolChangers/atc.cpp
							ToolChangers/atc_manual.cpp
							WebUI/Authentication.cpp
							WebUI/Mdns.cpp
							WebUI/NotificationsService.cpp
							WebUI/OTA.cpp
							WebUI/TelnetClient.cpp
							WebUI/TelnetServer.cpp
							WebUI/WebClient.cpp
							WebUI/WebCommands.cpp
							WebUI/WebUIServer.cpp
							WebUI/WifiConfig.cpp
							WebUI/WSChannel.cpp
							WebUI/ASyncTCP_Shim.cpp
                            version.cpp

							# extra
							# Spindles/ODriveSpindle.cpp
							# Spindles/ODrive/ODriveESP32.cpp
							# Extra/PinOn.cpp
							# Extra/Storage/FM25VXX.cpp
							# Extra/ADC/NHB_AD7794.cpp
                       INCLUDE_DIRS "." ".." "../include" "../lib/TMCStepper/src" "../lib/SSD1306/src" "../lib/arduinoWebSockets/src"
                       REQUIRES driver fatfs vfs sdmmc spiffs lwip esp_netif esp32 
                       PRIV_REQUIRES nvs_flash esp_driver_gpio mbedtls arduino-esp32 lib app_update esp_driver_pcnt esp32async__espasyncwebserver esp32async__asynctcp
					   WHOLE_ARCHIVE)


# Force a rebuild of the registry when source files change
set_property(TARGET ${COMPONENT_LIB} PROPERTY ADDITIONAL_CLEAN_FILES ${REGISTRY_OUTPUT})
